package baumaschinen;

public  class Transportgeraet extends Baumaschine{

    public Transportgeraet(int motorleistung) {
        super(motorleistung);
    }


}
